# interview-helper

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: main.rs
