[package]
name = "process_manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "process_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
uuid = { version = "1.17.0", features = ["v4"] }

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
genai = "0.3.5"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
screenshots = "0.8.10"
image = "0.25.6"
base64 = "0.22.1"
winreg = { version = "0.52", optional = true }
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging"], optional = true }
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[target.'cfg(windows)'.dependencies]
winreg = { version = "0.52" }
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging"] }
